# android-3d

./: .gitignore  CMakeLists.txt  README.md  build.gradle
src/androidTest/java/net/capellari/julien/threed/: ExampleInstrumentedTest.java  MathInstrumentedTest.kt  MatrixInstrumentedTest.kt  MatrixTest.kt  PointInstrumentedTest.kt  ThreeDTest.kt  VectorArrayTest.kt  VectorInstrumentedTest.kt  VectorTest.kt
src/main/: AndroidManifest.xml
src/main/java/net/capellari/julien/threed/: Color3.kt  Color4.kt  Extensions.kt  Mat2.kt  Mat2i.kt  Mat3.kt  Mat4.kt  Mesh.kt  Point2.kt  Point2f.kt  Point2i.kt  Point3.kt  Point4.kt  Program.kt  Uniform.kt  UniformProperty.kt  Vec2.kt  Vec2f.kt  Vec2i.kt  Vec3.kt  Vec4.kt  VertexAttributeProperty.kt  _Point2i.kt
src/main/java/net/capellari/julien/threed/annotations/: GPUType.kt
src/main/java/net/capellari/julien/threed/gpu/: Attribute.kt  Buffer.kt  Bufferable.kt  BufferableArray.kt  GPUError.kt  NativeBufferable.kt  Program.kt  ProgramError.kt  Shader.kt  ShaderError.kt  ShaderType.kt  Target.kt  Type.kt  Uniform.kt  Uniformable.kt  Usage.kt  VertexArray.kt  VertexAttribute.kt
src/main/java/net/capellari/julien/threed/jni/: JNIClass.java  JNIClass.kt  JNIRegister.kt  Points.java
src/main/java/net/capellari/julien/threed/math/: Coord.kt  Coords.kt  Degres.kt  Dimension.kt  FloatCoords.kt  MatSize.kt  Matrix.kt  Point.kt  Point2.kt  Point3.kt  SquareMatrix.kt  Utils.kt  Vec2.kt  Vec3.kt  Vector.kt  VectorArray.kt  VectorArrayIterator.kt  (+3 more)
src/main/jni/: gpu.h  jnitools.cpp  jnitools.h  macros.h  utils.cpp  utils.h
src/main/jni/gpu/: attribute.cpp  attribute.h  buffer.cpp  buffer.h  error.cpp  error.h  guard.cpp  guard.h  macros.h  program.cpp  program.h  shader.cpp  shader.h  uniform.cpp  uniform.h  vertex_array.cpp  vertex_array.h  vertex_attribute.cpp  vertex_attribute.h
src/main/jni/jnitools/: array.h  class.cpp  class.h  convert.cpp  convert.h  envref.cpp  envref.h  field.h  globalref.h  localref.h  meta.h  method.h  outils.cpp  outils.h
src/main/jni/macros/: bit.h  bitand.h  bool.h  cat.h  check.h  compl.h  dec.h  eq.h  eval.h  foreach.h  if.h  inc.h  is_paren.h  not.h  repeat.h  tuple.h  utils.h  when.h  while.h
src/main/jni/math/: array.cpp  array.h  coords.h  macros.h  matrix.cpp  matrix.h  outils.cpp  outils.h  point.cpp  point.h  vector.cpp  vector.h
src/main/jni/threed/: macros.h  mesh.cpp  mesh.h
src/test/java/net/capellari/julien/threed/: 2DUnitTest.kt  3DUnitTest.kt  4DUnitTest.kt  ExampleUnitTest.java  ThreeDUnitTest.kt  TwoDUnitTest.kt
(+7 files in other folders)
